tests/baselines/reference/invalidVoidAssignments.errors.txt
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(3,5): error TS2322: Type '无值' is not assignable to type '真假'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(4,5): error TS2322: Type '无值' is not assignable to type '文字'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(5,5): error TS2322: Type '无值' is not assignable to type '数字'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(9,5): error TS2322: Type '无值' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(12,5): error TS2322: Type '无值' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(14,5): error TS2322: Type '1' is not assignable to type '{ baz: 文字; }'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(15,5): error TS2322: Type '1' is not assignable to type '{ 0: 数字; }'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(18,1): error TS2539: Cannot assign to 'M' because it is not a variable.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(21,5): error TS2322: Type '无值' is not assignable to type 'T'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(23,1): error TS2539: Cannot assign to 'i' because it is not a variable.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(26,1): error TS2322: Type '类为 E' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(27,1): error TS2322: Type 'E' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(29,1): error TS2322: Type '{ f(): 无值; }' is not assignable to type '无值'.


==== tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts (13 errors) ====
    var x: void;
    
    var a: boolean = x;
        ~
!!! error TS2322: Type '无值' is not assignable to type '真假'.
    var b: string = x;
        ~
!!! error TS2322: Type '无值' is not assignable to type '文字'.
    var c: number = x;
        ~
!!! error TS2322: Type '无值' is not assignable to type '数字'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type '无值' is not assignable to type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type '无值' is not assignable to type 'I'.
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type '1' is not assignable to type '{ baz: 文字; }'.
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type '1' is not assignable to type '{ 0: 数字; }'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2539: Cannot assign to 'M' because it is not a variable.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type '无值' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! error TS2539: Cannot assign to 'i' because it is not a variable.
    
    enum E { A }
    x = E;
    ~
!!! error TS2322: Type '类为 E' is not assignable to type '无值'.
    x = E.A;
    ~
!!! error TS2322: Type 'E' is not assignable to type '无值'.
    
    x = { f() { } }
    ~
!!! error TS2322: Type '{ f(): 无值; }' is not assignable to type '无值'.